# TinyTS

./: .gitignore  README.md  docker_run.sh
TFLM_CMSISNN_4_1_0/: .gitignore  .mbed  Makefile  arena.cc  arena.h  main.cpp  mbed-os.lib  mbed_app.json  mbed_config.h  prof_ctrl.cc  prof_ctrl.h  submitter_implemented.cpp
TFLM_CMSISNN_4_1_0/Scripts/: GetBinSize.sh  Semi-Auto_OnDevice.sh
TFLM_CMSISNN_4_1_0/api/: internally_implemented.cpp  submitter_implemented.h
TFLM_CMSISNN_4_1_0/model/: inputs.cc  inputs.h  model_data.h  model_settings.cc
TFLM_CMSISNN_4_1_0/util/: tf_micro_model_runner.h
TinyTS/Tensor-Splitting-Code-Generator/: .gitignore  GenType.py  MemPlanner.py  MemPlannerAddon.py  MemPlannerAddonAPI.py  MemPlannerAddonUtils.py  MemProfiler.py  OpType.py  code_gen.py  depthwiseTemplate.py  main.py  utils.py
TinyTS/Tensor-Splitting-Code-Generator/utils/opdata_gen/: CMakeLists.txt  README.md
TinyTS/Tensor-Splitting-Code-Generator/utils/opdata_gen/inc/tensorflow/: builtin_op_data.h  common.h  compatibility.h  op_macro.h  quantization_util.h  types.h
TinyTS/Tensor-Splitting-Code-Generator/utils/opdata_gen/src/: calc_add.cc  calc_conv.cc  calc_dwconv.cc
TinyTS/Tensor-Splitting-Code-Generator/utils/opdata_gen/src/tensorflow/: quantization_util.cc
TinyTS/Tensor-Splitting-Graph-Rewriter/: AutoSplit.py  Compiler.py  MyGraph.py
TinyTS/runtime/: .gitignore  .mbed  .mbedignore  main.cpp  (+2 more)
docker/: dockerfile
models/: prepare_tflite_models.py  prepare_tflm_models.py  prepare_ts_gen.py  prepare_ts_models.py
scripts/: 0_prepare_env.sh  1_TinyTS_SRAM.py
(+712 files in other folders)
